# Maxwell

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  gemini-code-1778128112002.md  maxwell.toml.example  pyproject.toml  rules.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_funnel.py
contracts/: MaxwellSettlement.sol
maxwell/: __init__.py  api.py  auth.py  backends.py  cli.py  client.py  config.py  crypto.py  dashboard.html  dashboard.py  execution.py  filters.py  hardware.py  models.py  oracle.py  p2p.py  proxy.py  qos.py  routing.py  settlement.py
tests/: __init__.py  conftest.py  test_api.py  test_api_cors.py  test_auth.py  test_config_backends.py  test_crypto.py  test_e2e.py  test_filters.py  test_hardware.py  test_oracle.py  test_p2p.py  test_proxy.py  test_settlement.py  test_settlement_security.py
