[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maxwell-protocol"
version = "0.1.0"
description = "Decentralized compute metering & heuristic pruning gateway for AI inference."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Maxwell Team"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "eth-account>=0.11.0",
    "web3>=6.0.0",
    "bitarray>=2.8.0",
    "mmh3>=4.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.25.0",
    "kademlia>=2.2.2",
    "nvidia-ml-py>=11.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
]

[project.scripts]
maxwell = "maxwell.cli:app"

[tool.setuptools.packages.find]
include = ["maxwell*"]
exclude = ["contracts*", "tests*"]

[project.urls]
Homepage = "https://github.com/maxwell-protocol/maxwell"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
